--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
                         <div class="control-group">
                             <label class="control-label">动画效果</label>
                             <div class="effect-buttons">
+                                <button class="effect-btn" data-effect="none">
+                                    <span class="btn-icon">◻</span>
+                                    <span class="btn-text">无</span>
+                                </button>
                                 <button class="effect-btn active" data-effect="glitch">
                                     <span class="btn-icon">⚡</span>
                                     <span class="btn-text">抖动</span>
@@ -132,6 +136,9 @@
                         <div class="action-buttons">
                             <button class="pixel-btn btn-secondary" id="resetBtn">
                                 <span>↺ 重置</span>
+                            </button>
+                            <button class="pixel-btn btn-tertiary" id="exportImageBtn">
+                                <span>⬇ 导出图片</span>
                             </button>
                             <button class="pixel-btn btn-primary" id="exportBtn">
                                 <span>⬇ 导出GIF</span>
